--- a/index.html
+++ b/index.html
@@ -13,5 +13,20 @@
 
     <!-- paragraph-->
     <p>baru nyoba bikin web</p>
+
+    <!-- gambar -->
+
+<!-- hyperlink (anchor)-->
+<a href="http://www.google.com">link google</a>
+<a href="../halaman2.html">halaman 2</a>
+
+<!-- daftar (list) -->
+
+<!-- table heading -->
+<th></th>
+
+
 </body>
 </html>
+
+
