--- a/halaman2.html
+++ b/halaman2.html
@@ -5,11 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>halaman 2</title>
+    <link rel="stylesheet" href="../style.css"
 
-    
 </head>
 <body>
+
+    <!-- inline css -->
     <h1>halaman kdua</h1>
+    <h1>halaman kdua</h1>
+    <h1>halaman kdua</h1>
+    <h1>halaman kdua</h1>
+    <style>
+        h1  {
+          color:blue;
+          font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+          text-align: center;
+    </style>
+    
 
 </body>
 </html>
